--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dexie": "^3.2.2",
     "mobx": "^6.5.0",
     "mobx-react": "^7.4.0",
     "react": "^18.1.0",
